docs: fix enum typing
